# papermill-poc

./: .env.example  Makefile  README.md  pyproject.toml  run.py
lib/: useful_library.py
notebooks/input/: input.ipynb
notebooks/misc/: eda.ipynb
notebooks/output/: output_2022-11-25-14h-49m.ipynb
