[tool.poetry]
name = "papermill-poc"
version = "0.1.0"
description = ""
authors = ["k0tk267 <k0tk2670@gmail.com>"]
readme = "README.md"
packages = [{include = "papermill_poc"}]

[tool.poetry.dependencies]
python = "^3.8"
papermill = {extras = ["all"], version = "^2.4.0"}
python-dotenv = "^0.21.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
